--- a/package.json
+++ b/package.json
@@ -24,8 +24,9 @@
     "@radix-ui/react-toast": "^1.2.1",
     "@radix-ui/react-tooltip": "^1.1.2",
     "@vercel/analytics": "^1.3.1",
-    "@xpla/wallet-provider": "^1.0.0",
-    "@xpla/xpla.js": "^1.6.0",
+    "@xpla/wallet-provider": "^1.7.2",
+    "@xpla/xpla.js": "^1.8.0-beta.1",
+    "bech32": "^2.0.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
